# drone-nrf-map

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.cargo/: config
src/: lib.rs  reg.rs  thr.rs
src/periph/: mod.rs
src/periph/uarte/: Cargo.toml  lib.rs
src/pieces/: Cargo.toml  build.rs  lib.rs
src/pieces/1/: Cargo.toml  build.rs
src/pieces/10/: Cargo.toml  build.rs
src/pieces/11/: Cargo.toml  build.rs
src/pieces/12/: Cargo.toml  build.rs
src/pieces/2/: Cargo.toml  build.rs
src/pieces/3/: Cargo.toml  build.rs
src/pieces/4/: Cargo.toml  build.rs
src/pieces/5/: Cargo.toml  build.rs
src/pieces/6/: Cargo.toml  build.rs
src/pieces/7/: Cargo.toml  build.rs
src/pieces/8/: Cargo.toml  build.rs
src/pieces/9/: Cargo.toml  build.rs
svd/: Cargo.toml
svd/src/: lib.rs
tests/: periph_macros.rs
