[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
]

[package]
name = "drone-nrf-map"
version = "0.10.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-nrf-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-nrf-map/0.10/drone_nrf_map/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "nrf",
    "nrf52",
    "cortex",
    "arm",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
Nordic Semi nRFx peripheral mappings for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
nrf52810 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-nrf-map-pieces/nrf52810",
]
nrf52811 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-nrf-map-pieces/nrf52811",
]
nrf52832 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-nrf-map-pieces/nrf52832",
]
nrf52840 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-nrf-map-pieces/nrf52840",
]

[dependencies.drone-cortex-m]
version = "0.10.0"
path = "../drone-cortex-m"

[dependencies.drone-nrf-map-pieces]
version = "=0.10.0"
path = "src/pieces"
