cargo-features = ["resolver"]

[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
    "src/periph/uarte",
]

[package]
name = "drone-nrf-map"
version = "0.13.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-nrf-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-nrf-map/0.13/drone_nrf_map/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "nrf",
    "nrf52",
    "cortex",
    "arm",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
Nordic Semi nRFx peripheral mappings for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "drone-cortexm/std"]
bit-band = ["drone-nrf-map-pieces/bit-band"]
uarte = ["drone-nrf-map-periph-uarte"]

[dependencies.drone-core]
version = "0.13.0"
path = "../drone-core"

[dependencies.drone-cortexm]
version = "0.13.0"
path = "../drone-cortexm"

[dependencies.drone-nrf-map-pieces]
version = "=0.13.0"
path = "src/pieces"

[dependencies.drone-nrf-map-periph-uarte]
version = "=0.13.0"
path = "src/periph/uarte"
optional = true
