[package]
name = "drone-nrf-map-pieces"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-nrf-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-nrf-map/0.12/drone_nrf_map_pieces/"
license = "MIT OR Apache-2.0"
description = """
Nordic Semi nRFx peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[features]
default = []
bit-band = ["drone-cortexm/bit-band"]

[dependencies.drone-core]
version = "0.12.0"
path = "../../../drone-core"

[dependencies.drone-cortexm]
version = "0.12.0"
path = "../../../drone-cortexm"

[dependencies.drone-nrf-map-pieces-1]
version = "=0.12.0"
path = "1"

[dependencies.drone-nrf-map-pieces-2]
version = "=0.12.0"
path = "2"

[dependencies.drone-nrf-map-pieces-3]
version = "=0.12.0"
path = "3"

[dependencies.drone-nrf-map-pieces-4]
version = "=0.12.0"
path = "4"

[dependencies.drone-nrf-map-pieces-5]
version = "=0.12.0"
path = "5"

[dependencies.drone-nrf-map-pieces-6]
version = "=0.12.0"
path = "6"

[dependencies.drone-nrf-map-pieces-7]
version = "=0.12.0"
path = "7"

[dependencies.drone-nrf-map-pieces-8]
version = "=0.12.0"
path = "8"

[dependencies.drone-nrf-map-pieces-9]
version = "=0.12.0"
path = "9"

[dependencies.drone-nrf-map-pieces-10]
version = "=0.12.0"
path = "10"

[dependencies.drone-nrf-map-pieces-11]
version = "=0.12.0"
path = "11"

[dependencies.drone-nrf-map-pieces-12]
version = "=0.12.0"
path = "12"

[build-dependencies.drone-nrf-map-svd]
version = "=0.12.0"
path = "../../svd"
