[package]
name = "drone-nrf-map-pieces-6"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-nrf-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-nrf-map/0.14/drone_nrf_map_pieces_6/"
license = "MIT OR Apache-2.0"
description = """
Nordic Semi nRFx peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.14.0"
path = "../../../../drone-core"

[dependencies.drone-cortexm]
version = "0.14.0"
path = "../../../../drone-cortexm"

[build-dependencies.drone-nrf-map-svd]
version = "=0.14.0"
path = "../../../svd"
